# npc_crawler_gs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  application.py  main.py  pyproject.toml  requirements.txt
config/: configuration.py  settings.py
db/: db.py
dto/: base_action_dto.py  game_action_dto.py  player_action_dto.py
errors/: action_errors.py  base_error.py  errors.py
game/: actions.py  characters.py  errors.py  game_app.py  game_observer.py  location.py  location_generator.py  map.py  player.py  player_controller.py  queue_wrapper.py
game/item/: corpse.py  def_object.py  dummy.py  grass.py  meat.py  purple_potion.py  red_potion.py  sword.py  tree.py  yellow_potion.py
kafka/: consumer_async.py  producer_async.py
models/: models.py
repository/: repository.py
service/: game_service.py
utils/: helper.py  mapper.py
